Fix code to use the latest Legend Pure version